<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/rose_200"
    tools:context=".SelectOptionAuthActivity2">

    <include layout="@layout/action_bar_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/escogelogreg"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_login"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_secondary"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/botonredondiado"
            android:backgroundTint="@color/red_700"
            android:textColor="@color/white"
            android:layout_marginRight="30dp"
            android:text="@string/user_login_btn"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botonredondiado"
            android:backgroundTint="@color/gray_500"
            android:textColor="@color/white"
            android:text="@string/user_register_btn"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>